8315409: Fix jfx-tests so they work with latest jfx build
Reviewed-by: kcr, aghaisas